# rtd_demo

./: LICENSE  README.md  setup.cfg
docs/: carbon_now.rst  carbonintensity.rst  conf.py  index.rst  tutorials.rst
rtd_demo/: __init__.py  carbon_intensity.py
