[metadata]
name = rtd_demo
version = 0.0.1
author = P McCallum
author_email = peter.mccallum@ed.ac.uk
description = RTD demo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ecdf.ed.ac.uk/pmccallu/rtd_demo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
